@@ -1,3 +1,13 @@
+2003-07-31  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.5-cvs-b75
+
+	* removed stray "?" in sort_album.php
+
+	* made drawSelect able to handle multiple selections
+
+	* made printAlbumOptionList able to produce a list of readable files
+
+	* modified ml_pulldown for offline browsing
+
 2003-07-31  Jens Tkotz <jens@peino.de> 1.3.5-cvs-b74
 
 	* Changed no_NO (Norsk) to correct nb_NO (Norsk bokmal)
